Attempted fix for helper vertical align

--- a/present/meta/style.css
+++ b/present/meta/style.css
@@ -130,7 +130,6 @@ h1, h2
 {
     height: 100%;
     display: inline-block;
-    float: left;
     vertical-align: middle;
 }
 
